Make Gravitino build and run against JDK8, 11, 17

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,7 @@ version = 0.4.0-SNAPSHOT
 #sonatype credentials
 SONATYPE_USER = admin
 SONATYPE_PASSWORD = password
+
+#jdkVersion is used to specify the version of JDK to build and test against Gravitino, current
+# supported version is 8, 11, and 17.
+jdkVersion = 8
