--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@ version = 0.4.0-SNAPSHOT
 SONATYPE_USER = admin
 SONATYPE_PASSWORD = password
 
-#jdkVersion is used to specify the version of JDK to build and test against Gravitino, current
+#jdkVersion is used to specify the version of JDK to build and test Gravitino, current
 # supported version is 8, 11, and 17.
 jdkVersion = 8
