--- a/dev/docker/trino-it/docker-compose.yaml
+++ b/dev/docker/trino-it/docker-compose.yaml
@@ -21,6 +21,11 @@ services:
       - ../../../trino-connector/build/libs:/usr/lib/trino/plugin/gravitino
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: ["CMD", "trino", "--execute", "SELECT 1"]
+      interval: 10s
+      timeout: 60s
+      retries: 5
     depends_on:
       - hive
       - postgresql
@@ -54,6 +59,11 @@ services:
       - trino-net
     volumes:
       - ./init/postgres:/docker-entrypoint-initdb.d/
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 60s
+      retries: 5
 
   mysql:
     image: mysql:8.0
@@ -73,6 +83,11 @@ services:
       --collation-server=utf8mb4_general_ci
       --explicit_defaults_for_timestamp=true
       --lower_case_table_names=1
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping"]
+      interval: 10s
+      timeout: 60s
+      retries: 5
 
 networks:
   trino-net:
