set node.id in node.properties

--- a/dev/docker/trino/conf/node.properties
+++ b/dev/docker/trino/conf/node.properties
@@ -4,4 +4,5 @@
 #
 node.environment = docker
 node.data-dir = /data/trino
+node.id = ffffffff-ffff-ffff-ffff-ffffffffffff
 plugin.dir = /usr/lib/trino/plugin
