support ts and add global request handing

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -3,8 +3,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.organizeImports": false
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "never"
   },
   "eslint.validate": ["javascript", "javascriptreact"],
   "eslint.format.enable": true,
