--- a/web/package.json
+++ b/web/package.json
@@ -30,19 +30,26 @@
     "chroma-js": "^2.4.2",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
     "next": "14.0.3",
     "nprogress": "^0.2.0",
+    "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-use": "^17.4.1",
+    "sweetalert2": "^11.10.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
     "@next/bundle-analyzer": "^14.0.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.10.5",
+    "@types/qs": "^6.9.11",
+    "@types/react": "^18.2.46",
     "autoprefixer": "^10.4.16",
     "env-cmd": "^10.1.0",
     "eslint": "^8",
@@ -50,6 +57,7 @@
     "eslint-config-prettier": "^9.0.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.3"
   }
 }
