bugfix(CI) Automatically trigger CI for auto-cherry-pick workflow
Based on the document of
[`github-cherry-pick-action`](https://github.com/marketplace/actions/github-cherry-pick-action#action-inputs)
, add token input to change the default token that the auto-cherry-pick workflow used.

Signed-off-by: Bo-Wei Chen(BWbwchen) <tim.chenbw@gmail.com>

--- a/.github/workflows/auto-cherry-pick.yml
+++ b/.github/workflows/auto-cherry-pick.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Cherry pick into branch-0.1
         uses: carloscastrojumo/github-cherry-pick-action@v1.0.9
         with:
+          token: ${{ secrets.BOT_TOKEN }}
           branch: branch-0.1
           labels: |
             cherry-pick
@@ -36,6 +37,7 @@ jobs:
       - name: Cherry pick into branch-0.2
         uses: carloscastrojumo/github-cherry-pick-action@v1.0.9
         with:
+          token: ${{ secrets.BOT_TOKEN }}
           branch: branch-0.2
           labels: |
             cherry-pick
@@ -53,6 +55,7 @@ jobs:
       - name: Cherry pick into branch-0.3
         uses: carloscastrojumo/github-cherry-pick-action@v1.0.9
         with:
+          token: ${{ secrets.BOT_TOKEN }}
           branch: branch-0.3
           labels: |
             cherry-pick
