--- a/dev/docker/trino/Dockerfile
+++ b/dev/docker/trino/Dockerfile
@@ -49,12 +49,12 @@ COPY --chown=trino:trino packages/trino/conf /etc/trino
 COPY --chown=trino:trino packages/gravitino-trino-connector/mysql-connector-java-8.0.27.jar /usr/lib/trino/plugin/iceberg/
 COPY --chown=trino:trino packages/gravitino-trino-connector/postgresql-42.7.0.jar /usr/lib/trino/plugin/iceberg/
 
-RUN mkdir /tmp/gravitino-trino-connector && mkdir -p /usr/lib/trino/plugin/gravitino
-COPY --chown=trino:trino packages/gravitino-trino-connector /tmp/gravitino-trino-connector
+RUN mkdir /tmp/gravitino
+COPY --chown=trino:trino packages/gravitino-trino-connector /tmp/gravitino
 
 ARG IMAGE_NAME
 RUN if [ "$IMAGE_NAME" = "datastrato/trino" ] ; then \
-    cp -rf /tmp/gravitino-trino-connector/*.jar /usr/lib/trino/plugin/gravitino/; \
+    cp -rf /tmp/gravitino /usr/lib/trino/plugin/; \
     else echo "Copying files for other images"; \
     fi
 
