--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,6 +41,7 @@ prometheus = "0.16.0"
 jsqlparser = "4.2"
 mysql = "8.0.23"
 postgresql = "42.6.0"
+immutables-value = "2.10.0"
 
 protobuf-plugin = "0.9.2"
 spotless-plugin = '6.11.0'
@@ -133,6 +134,7 @@ prometheus-servlet = { group = "io.prometheus", name = "simpleclient_servlet", v
 jsqlparser = { group = "com.github.jsqlparser", name = "jsqlparser", version.ref = "jsqlparser" }
 mysql-driver = { group = "mysql", name = "mysql-connector-java", version.ref = "mysql" }
 postgresql-driver = { group = "org.postgresql", name = "postgresql", version.ref = "postgresql" }
+immutables-value = { module = "org.immutables:value", version.ref = "immutables-value" }
 
 [bundles]
 log4j = ["slf4j-api", "log4j-slf4j2-impl", "log4j-api", "log4j-core", "log4j-12-api"]
