--- a/web/.gitignore
+++ b/web/.gitignore
@@ -9,7 +9,13 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn-integrity
 .yarn/install-state.gz
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
 /.gradle
 /.node
 
@@ -32,6 +38,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env*.local
