--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,14 @@
   "engines": {
     "node": ">=18.18.2",
     "npm": ">=9.8.1",
-    "yarn": ">=1.22.19"
+    "yarn": ">=1.22.19",
+    "pnpm": ">=8.14.0"
   },
   "scripts": {
-    "analyze": "env-cmd -f .env.analyze yarn build",
-    "server": "next dev --turbo",
-    "build": "yarn format && next build",
-    "dist": "env-cmd -f .env.static yarn build",
+    "analyze": "env-cmd -f .env.analyze pnpm build",
+    "dev": "next dev --turbo",
+    "build": "pnpm format && next build",
+    "dist": "env-cmd -f .env.static pnpm build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
