--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,22 @@ jobs:
     outputs:
       source_changes: ${{ steps.filter.outputs.source_changes }}
 
-  # This workflow contains a single job called "build"
+  lint-check:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.source_changes != 'true'
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          java-version: 8
+          distribution: 'temurin'
+
+      - name: Build with Gradle
+        run: ./gradlew build -x test -PjdkVersion=8
+
+      # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
