--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
     outputs:
       source_changes: ${{ steps.filter.outputs.source_changes }}
 
-  lint-check:
+  compile-check:
     runs-on: ubuntu-latest
     needs: changes
     if: needs.changes.outputs.source_changes != 'true'
