--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -151,3 +151,4 @@ publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish
 rat = { id = "org.nosphere.apache.rat", version.ref = "rat-plugin" }
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow-plugin" }
 node = { id = "com.github.node-gradle.node", version.ref = "node-plugin" }
+tasktree = {id = "com.dorongold.task-tree", version = "2.1.1"}
