[#1484] improvement(*): Add support for listing task dependencies tree. (#1485)
### What changes were proposed in this pull request?

Add gradle task `taskTree` to show task dependencies tree. 

### Why are the changes needed?

For better debugging and developement.

Fix: #1484

### Does this PR introduce _any_ user-facing change?

N/A.

### How was this patch tested?

Test locally.  you can use 
```
./gradlew {taskName} taskTree 
```
to show task dependencies tree. Here is an example
```
./gradlew assembleDistribution taskTree
```

The result:

```text
:assembleDistribution
+--- :assembleTrinoConnector
|    \--- :trino-connector:copyLibs
|         +--- :trino-connector:build
|         |    +--- :trino-connector:assemble
|         |    |    \--- :trino-connector:jar
|         |    |         +--- :trino-connector:classes
|         |    |         |    +--- :trino-connector:compileJava
|         |    |         |    |    \--- :clients:client-java-runtime:shadowJar
|         |    |         |    |         +--- :api:jar
|         |    |         |    |         |    +--- :api:classes
|         |    |         |    |         |    |    +--- :api:compileJava
|         |    |         |    |         |    |    \--- :api:processResources
|         |    |         |    |         |    \--- :api:compileJava *
|         |    |         |    |         +--- :common:jar
|         |    |         |    |         |    +--- :common:classes
|         |    |         |    |         |    |    +--- :common:compileJava
|         |    |         |    |         |    |    |    \--- :api:jar *
|         |    |         |    |         |    |    \--- :common:processResources
|         |    |         |    |         |    \--- :common:compileJava *
|         |    |         |    |         +--- :clients:client-java:jar
|         |    |         |    |         |    +--- :clients:client-java:classes
|         |    |         |    |         |    |    +--- :clients:client

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -151,3 +151,6 @@ publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "publish
 rat = { id = "org.nosphere.apache.rat", version.ref = "rat-plugin" }
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow-plugin" }
 node = { id = "com.github.node-gradle.node", version.ref = "node-plugin" }
+tasktree = {id = "com.dorongold.task-tree", version = "2.1.1"}
+dependencyLicenseReport = {id = "com.github.jk1.dependency-license-report", version = "2.5"}
+bom = {id = "org.cyclonedx.bom", version = "1.5.0"}
