--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Integration Test
+name: build
 
 # Controls when the workflow will run
 on:
@@ -12,6 +12,7 @@ concurrency:
   group: ${{ github.worklfow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: ${{ github.event_name == 'pull_requests' }}
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   changes:
     runs-on: ubuntu-latest
@@ -46,10 +47,71 @@ jobs:
     outputs:
       source_changes: ${{ steps.filter.outputs.source_changes }}
 
-  # Integration test for AMD64 architecture
-  test-amd64-arch:
+  compile-check:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.source_changes != 'true'
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          java-version: 8
+          distribution: 'temurin'
+
+      - name: Build with Gradle
+        run: ./gradlew build -x test -PjdkVersion=8
+
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java-version: [ 8, 11, 17 ]
+    timeout-minutes: 30
     needs: changes
     if: needs.changes.outputs.source_changes == 'true'
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          java-version: ${{ matrix.java-version }}
+          distribution: 'temurin'
+
+      - name: Build with Gradle
+        run: ./gradlew build -PskipITs -PjdkVersion=${{ matrix.java-version }}
+
+      - name: Upload unit tests report
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: unit test report
+          path:
+            build/reports
+
+      - name: Jacoco Report to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.6.1
+        with:
+          paths: ${{ github.workspace }}/**/build/reports/jacoco/test/jacocoTestReport.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 40
+          min-coverage-changed-files: 60
+          title: 'Code Coverage Report'
+          debug-mode: false
+          update-comment: true
+          pass-emoji: ':green_circle:'
+          fail-emoji: ':red_circle:'
+      - name: Get the Coverage info
+        run: |
+          echo "Total coverage ${{ steps.jacoco.outputs.coverage-overall }}"
+          echo "Changed Files coverage ${{ steps.jacoco.outputs.coverage-changed-files }}"
+
+  test-amd64-arch:
+    needs: build
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
