--- a/catalogs/catalog-jdbc-mysql/src/main/resources/jdbc-mysql.conf
+++ b/catalogs/catalog-jdbc-mysql/src/main/resources/jdbc-mysql.conf
@@ -2,8 +2,8 @@
 # Copyright 2023 Datastrato Pvt Ltd.
 # This software is licensed under the Apache License version 2.
 #
-# jdbc-url: jdbc:mysql://localhost:3306/
-# jdbc-user: strato
-# jdbc-password: strato
-# jdbc-driver: com.mysql.jdbc.Driver
-# jdbc-driver: com.mysql.cj.jdbc.Driver
+# jdbc-url = jdbc:mysql://localhost:3306/
+# jdbc-user = strato
+# jdbc-password = strato
+# jdbc-driver = com.mysql.jdbc.Driver
+# jdbc-driver = com.mysql.cj.jdbc.Driver
