--- a/catalogs/catalog-jdbc-mysql/src/main/resources/jdbc-mysql.conf
+++ b/catalogs/catalog-jdbc-mysql/src/main/resources/jdbc-mysql.conf
@@ -5,5 +5,5 @@
 # jdbc-url = jdbc:mysql://localhost:3306/
 # jdbc-user = strato
 # jdbc-password = strato
-# jdbc-driver = com.mysql.jdbc.Driver
+# The selection of Driver should be filled in according to your needs, such as `com.mysql.jdbc.Driver` or `com.mysql.cj.jdbc.Driver`
 # jdbc-driver = com.mysql.cj.jdbc.Driver
