--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,9 @@ SONATYPE_PASSWORD = password
 #jdkVersion is used to specify the version of JDK to build and test Gravitino, current
 # supported version is 8, 11, and 17.
 jdkVersion = 8
+
+# defaultScalaVersion is used to specify the version of Scala to build and test Gravitino
+defaultScalaVersion = 2.12
+
+# defaultSparkVersion is used to specify the version of Spark to build and test Gravitino
+defaultSparkVersion = 3.4
