--- a/web/.gitignore
+++ b/web/.gitignore
@@ -10,11 +10,7 @@
 /.pnp
 .pnp.js
 .yarn-integrity
-.yarn/install-state.gz
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
+.yarn/
 .pnp.*
 /.gradle
 /.node
