--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,7 @@
   "private": true,
   "engines": {
     "node": ">=18.18.2",
-    "npm": ">=9.8.1",
-    "yarn": ">=1.22.19",
-    "pnpm": ">=8.14.0"
+    "npm": ">=9.8.1"
   },
   "scripts": {
     "analyze": "env-cmd -f .env.analyze pnpm build",
