[#1694] improve: optimized Github issue template file

--- a/.github/ISSUE_TEMPLATE/epic.yml
+++ b/.github/ISSUE_TEMPLATE/epic.yml
@@ -1,7 +1,9 @@
 name: Epic
 title: "[EPIC] "
 description: An epic issue with multiple sub-tasks
-labels: [ "kind:epic,priority:major" ]
+labels: [ "epic" ]
+projects: [ "datastrato/1" ]
+
 body:
 
   - type: textarea
