--- a/.github/ISSUE_TEMPLATE/improvement.yml
+++ b/.github/ISSUE_TEMPLATE/improvement.yml
@@ -4,6 +4,7 @@ name: Improvement
 title: "[Improvement] "
 description: Suggest an improvement on performance, code quality, user experience, etc
 labels: [ "improvement" ]
+projects: [ "datastrato/1" ]
 body:
 
   - type: textarea
