--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,6 +43,8 @@ jsqlparser = "4.2"
 mysql = "8.0.23"
 postgresql = "42.6.0"
 immutables-value = "2.10.0"
+selenium = "3.141.59"
+rauschig = "1.2.0"
 
 protobuf-plugin = "0.9.2"
 spotless-plugin = '6.11.0'
@@ -142,6 +144,8 @@ postgresql-driver = { group = "org.postgresql", name = "postgresql", version.ref
 minikdc = { group = "org.apache.hadoop", name = "hadoop-minikdc", version.ref = "hadoop-minikdc"}
 immutables-value = { module = "org.immutables:value", version.ref = "immutables-value" }
 commons-cli = { group = "commons-cli", name = "commons-cli", version.ref = "commons-cli" }
+selenium = { group = "org.seleniumhq.selenium", name = "selenium-java", version.ref = "selenium" }
+rauschig = { group = "org.rauschig", name = "jarchivelib", version.ref = "rauschig" }
 
 [bundles]
 log4j = ["slf4j-api", "log4j-slf4j2-impl", "log4j-api", "log4j-core", "log4j-12-api"]
