--- a/conf/gravitino.conf.template
+++ b/conf/gravitino.conf.template
@@ -31,7 +31,7 @@ gravitino.server.webserver.responseHeaderSize = 131072
 gravitino.entity.store = kv
 # The RocksDB entity store
 gravitino.entity.store.kv = RocksDBKvBackend
-# The RocksDB backend path for entity store, default value is as below, please change it in your production environment.
+# The RocksDB backend path for entity store, default value is as below, please uncomment and change it in your production environment.
 # gravitino.entity.store.kv.rocksdbPath = ${GRAVITINO_HOME}/data/rocksdb
 
 # THE CONFIGURATION FOR Gravitino CATALOG
