--- a/docs/open-api/tables.yaml
+++ b/docs/open-api/tables.yaml
@@ -39,6 +39,10 @@ paths:
             examples:
               HiveTableCreate:
                 $ref: "#/components/examples/HiveTableCreate"
+              MysqlTableCreate:
+                $ref: "#/components/examples/MysqlTableCreate"
+              PostgresqlTableCreate:
+                $ref: "#/components/examples/PostgresqlTableCreate"
       responses:
         "200":
           $ref: "#/components/responses/TableResponse"
@@ -190,6 +194,13 @@ components:
           default: [ ]
           items:
             $ref: "./partitioning.yaml#/components/schemas/PartitioningSpec"
+        indexes:
+          type: array
+          description: Indexes of the table
+          nullable: true
+          default: [ ]
+          items:
+            $ref: "./indexes.yaml#/components/schemas/IndexSpec"
 
     Table:
       type: object
@@ -236,6 +247,13 @@ components:
           default: [ ]
           items:
             $ref: "./partitioning.yaml#/components/schemas/PartitioningSpec"
+        indexes:
+          type: array
+          description: Indexes of the table
+          nullable: true
+          default: [ ]
+          items:
+            $ref: "./indexes.yaml#/components/schemas/IndexSpec"
 
     Distribution:
       type: object
@@ -322,6 +340,11 @@ components:
           description: Whether the column is nullable
           nullable: true
           default: true
+        autoIncrement:
+          type: boolean
+          description: Whether the column is auto increment
+          nullable: true
+          default: false
 
     TableUpdatesRequest:
       type: object
@@ -667,6 +690,10 @@ components:
           examples:
             TableResponse:
               $ref: "#/components/examples/TableResponse"
+            MysqlTableResponse:
+              $ref: "#/components/examples/MysqlTableResponse"
+            PostgresqlTableResponse:
+              $ref: "#/components/examples/PostgresqlTableResponse"
 
   examples:
     TableListResponse:
@@ -693,7 +720,8 @@ components:
             "name": "id",
             "type": "integer",
             "comment": "id column comment",
-            "nullable": true
+            "nullable": true,
+            "autoIncrement": false
           },
           {
             "name": "name",
@@ -742,7 +770,113 @@ components:
         ],
         "properties": {
           "format": "ORC"
+        },
+        indexes:[ ]
+      }
+
+    MysqlTableCreate:
+      value: {
+        "name": "my_mysql_table",
+        "comment": "This is my MySQL table",
+        "columns": [
+          {
+            "name": "id",
+            "type": "int",
+            "comment": "id column comment",
+            "nullable": false,
+            "autoIncrement": true
+          },
+          {
+            "name": "name",
+            "type": "string",
+            "comment": "name column comment",
+            "nullable": true
+          },
+          {
+            "name": "age",
+            "type": "int",
+            "comment": "age column comment",
+            "nullable": true
+          },
+          {
+            "name": "dt",
+            "type": "date",
+            "comment": "dt column comment",
+            "nullable": true
+          }
+        ],
+        "indexes": [
+          {
+            "indexType": "primary_key",
+            "name": "PRIMARY",
+            "fieldNames": [ [ "id" ] ]
+          },
+          {
+            "indexType": "unique_key",
+            "name": "uk_1",
+            "fieldNames": [ [ "name" ] ]
+          },
+          {
+            "indexType": "unique_key",
+            "name": "uk_2",
+            "fieldNames": [ [ "name" ] ,[ "age" ] ,[ "dt" ] ]
+          }
+        ],
+        "properties": {
+          "engine": "InnoDB",
+          "auto-increment-offset": "1"
         }
+      }
+
+    PostgresqlTableCreate:
+      value: {
+        "name": "my_postgresql_table",
+        "comment": "This is my PostgreSQL table",
+        "columns": [
+          {
+            "name": "id",
+            "type": "int",
+            "comment": "id column comment",
+            "nullable": false,
+            "autoIncrement": true
+          },
+          {
+            "name": "name",
+            "type": "string",
+            "comment": "name column comment",
+            "nullable": true
+          },
+          {
+            "name": "age",
+            "type": "int",
+            "comment": "age column comment",
+            "nullable": true
+          },
+          {
+            "name": "dt",
+            "type": "date",
+            "comment": "dt column comment",
+            "nullable": true
+          }
+        ],
+        "indexes": [
+          {
+            "indexType": "primary_key",
+            "name": "PRIMARY",
+            "fieldNames": [ [ "id" ] ]
+          },
+          {
+            "indexType": "unique_key",
+            "name": "uk_1",
+            "fieldNames": [ [ "name" ] ]
+          },
+          {
+            "indexType": "unique_key",
+            "name": "uk_2",
+            "fieldNames": [ [ "name" ] ,[ "age" ] ,[ "dt" ] ]
+          }
+        ],
+        "properties": { }
       }
 
     TableResponse:
@@ -756,7 +890,8 @@ components:
               "name": "id",
               "type": "integer",
               "comment": "id column comment",
-              "nullable": true
+              "nullable": true,
+              "autoIncrement": false
             },
             {
               "name": "name",
@@ -820,6 +955,132 @@ components:
               "fieldName": [
                 "dt"
               ]
+            }
+          ],
+          "indexes": [ ]
+        }
+      }
+
+    MysqlTableResponse:
+      value: {
+        "code": 0,
+        "table": {
+          "name": "my_mysql_table",
+          "comment": "This is my MySQL table",
+          "columns": [
+            {
+              "name": "id",
+              "type": "integer",
+              "comment": "id column comment",
+              "nullable": true,
+              "autoIncrement": true
+            },
+            {
+              "name": "name",
+              "type": "string",
+              "comment": "name column comment",
+              "nullable": true
+            },
+            {
+              "name": "age",
+              "type": "integer",
+              "comment": "age column comment",
+              "nullable": true
+            },
+            {
+              "name": "dt",
+              "type": "date",
+              "comment": "dt column comment",
+              "nullable": true
+            }
+          ],
+          "properties": {
+            "engine": "InnoDB",
+            "auto-increment-offset": "1",
+          },
+          "audit": {
+            "creator": "gravitino",
+            "createTime": "2023-12-08T11:07:46.938Z"
+          },
+          "distribution": null,
+          "sortOrders": [ ],
+          "partitioning": [ ],
+          "indexes": [
+            {
+              "indexType": "primary_key",
+              "name": "PRIMARY",
+              "fieldNames": [ [ "id" ] ]
+            },
+            {
+              "indexType": "unique_key",
+              "name": "uk_1",
+              "fieldNames": [ [ "name" ] ]
+            },
+            {
+              "indexType": "unique_key",
+              "name": "uk_2",
+              "fieldNames": [ [ "name" ] ,[ "age" ] ,[ "dt" ] ]
+            }
+          ]
+        }
+      }
+
+    PostgresqlTableResponse:
+      value: {
+        "code": 0,
+        "table": {
+          "name": "my_postgresql_table",
+          "comment": "This is my PostgreSQL table",
+          "columns": [
+            {
+              "name": "id",
+              "type": "integer",
+              "comment": "id column comment",
+              "nullable": true,
+              "autoIncrement": true
+            },
+            {
+              "name": "name",
+              "type": "string",
+              "comment": "name column comment",
+              "nullable": true
+            },
+            {
+              "name": "age",
+              "type": "integer",
+              "comment": "age column comment",
+              "nullable": true
+            },
+            {
+              "name": "dt",
+              "type": "date",
+              "comment": "dt column comment",
+              "nullable": true
+            }
+          ],
+          "properties": { },
+          "audit": {
+            "creator": "gravitino",
+            "createTime": "2023-12-08T11:07:46.938Z"
+          },
+          "distribution": null,
+          "sortOrders": [ ],
+          "partitioning": [ ],
+          "indexes": [
+            {
+              "indexType": "primary_key",
+              "name": "PRIMARY",
+              "fieldNames": [ [ "id" ] ]
+            },
+            {
+              "indexType": "unique_key",
+              "name": "uk_1",
+              "fieldNames": [ [ "name" ] ]
+            },
+            {
+              "indexType": "unique_key",
+              "name": "uk_2",
+              "fieldNames": [ [ "name" ] ,[ "age" ] ,[ "dt" ] ]
             }
           ]
         }
